# nyc-apartments

./: .gitignore  AGENTS.md  LISTINGS.md  README.md  pyproject.toml
.github/workflows/: update-listings.yml
config/: search.example.toml  smoke.toml
data/: current-listings.json
data/fixtures/: craigslist.json  facebook.json  streeteasy.json
data/policy/: 421a-bbls.example.csv  building-signals.example.csv
docs/: plan.md
src/nyc_apartments/: __init__.py  cli.py  config.py  dedupe.py  env.py  filters.py  history.py  models.py  normalize.py  pipeline.py
src/nyc_apartments/enrich/: __init__.py  building_signals.py  geocode.py  policy.py  tax_benefits.py
src/nyc_apartments/render/: markdown.py
src/nyc_apartments/sources/: __init__.py  apify.py
tests/: test_building_signals.py  test_filters.py  test_geocode.py  test_history.py  test_models.py  test_normalize.py  test_policy.py  test_render.py  test_tax_benefits.py
