[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-apartments"
version = "0.1.0"
description = "NYC rental listing aggregation and policy-intelligence pipeline"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
live = ["apify-client>=1.8.1"]
dev = ["ruff>=0.5"]

[project.scripts]
nyc-apartments = "nyc_apartments.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
